--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,12 @@
 
     {% include footer.html %}
 
-  </body>
+<script>
+  $(document).ready(function() {
+    $("h1").sparkle();
+  });
+</script>
+ 
+ </body>
 
 </html>
